new scaffold g code

--- a/test/fixtures/codes.yml
+++ b/test/fixtures/codes.yml
@@ -2,12 +2,14 @@
 
 one:
   text: MyString
+  args: MyString
   lang: MyString
   status: MyString
   output: MyString
 
 two:
   text: MyString
+  args: MyString
   lang: MyString
   status: MyString
   output: MyString
